<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TRAXster</string>
    <string name="app_url" />
    <string name="app_desc">Find out more about this open-source app at: turtle-player.co.uk</string>
    <string name="zero">0</string>
    <string name="trackPostionSeparator">/</string>
    <string name="list">List</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>
    <string name="check_button">Check for MP3s</string>
    <string name="album_art">Album Art</string>
    <string name="trackInitialValue">Track</string>
    <string name="rootSrcInitialValue">RootSrc</string>
    <string name="genreInitialValue">Genre</string>
    <string name="artistInitialValue">Artist</string>
    <string name="albumInitialValue">Album</string>
    <string name="dirInitialValue">Folder</string>
    <string name="durationInitialValue">0.00</string>
    <string name="currPositionInitialValue">0.00</string>
    <string name="listLabelInitialValue">Empty</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="playback">Playback Settings</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="library">Library</string>
    <string name="sync_library">Sync Library</string>
    <string name="edit_dir">Edit Dir</string>
    <string name="default_path">Path/To/Replace</string>
    <string name="dirchooser_label">Dir Chooser</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="pointer">Pointer</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="toastRescan">Database rescan started</string>
    <string name="tag.genre.unknown">Unknown</string>
    <string name="tag.genre.0">Blues</string>
    <string name="tag.genre.1">Classic Rock</string>
    <string name="tag.genre.2">Country</string>
    <string name="tag.genre.3">Dance</string>
    <string name="tag.genre.4">Disco</string>
    <string name="tag.genre.5">Funk</string>
    <string name="tag.genre.6">Grunge</string>
    <string name="tag.genre.7">Hip-Hop</string>
    <string name="tag.genre.8">Jazz</string>
    <string name="tag.genre.9">Metal</string>
    <string name="tag.genre.10">New Age</string>
    <string name="tag.genre.11">Oldies</string>
    <string name="tag.genre.12">Other</string>
    <string name="tag.genre.13">Pop</string>
    <string name="tag.genre.14">R&amp;B</string>
    <string name="tag.genre.15">Rap</string>
    <string name="tag.genre.16">Reggae</string>
    <string name="tag.genre.17">Rock</string>
    <string name="tag.genre.18">Techno</string>
    <string name="tag.genre.19">Industrial</string>
    <string name="tag.genre.20">Alternative</string>
    <string name="tag.genre.21">Ska</string>
    <string name="tag.genre.22">Death Metal</string>
    <string name="tag.genre.23">Pranks</string>
    <string name="tag.genre.24">Soundtrack</string>
    <string name="tag.genre.25">Euro-Techno</string>
    <string name="tag.genre.26">Ambient</string>
    <string name="tag.genre.27">Trip-Hop</string>
    <string name="tag.genre.28">Vocal</string>
    <string name="tag.genre.29">Jazz+Funk</string>
    <string name="tag.genre.30">Fusion</string>
    <string name="tag.genre.31">Trance</string>
    <string name="tag.genre.32">Classical</string>
    <string name="tag.genre.33">Instrumental</string>
    <string name="tag.genre.34">Acid</string>
    <string name="tag.genre.35">House</string>
    <string name="tag.genre.36">Game</string>
    <string name="tag.genre.37">Sound Clip</string>
    <string name="tag.genre.38">Gospel</string>
    <string name="tag.genre.39">Noise</string>
    <string name="tag.genre.40">Alternative Rock</string>
    <string name="tag.genre.41">Bass</string>
    <string name="tag.genre.42">Soul</string>
    <string name="tag.genre.43">Punk</string>
    <string name="tag.genre.44">Space</string>
    <string name="tag.genre.45">Meditative</string>
    <string name="tag.genre.46">Instrumental Pop</string>
    <string name="tag.genre.47">Instrumental Rock</string>
    <string name="tag.genre.48">Ethnic</string>
    <string name="tag.genre.49">Gothic</string>
    <string name="tag.genre.50">Darkwave</string>
    <string name="tag.genre.51">Techno-Industrial</string>
    <string name="tag.genre.52">Electronic</string>
    <string name="tag.genre.53">Pop-Folk</string>
    <string name="tag.genre.54">Eurodance</string>
    <string name="tag.genre.55">Dream</string>
    <string name="tag.genre.56">Southern Rock</string>
    <string name="tag.genre.57">Comedy</string>
    <string name="tag.genre.58">Cult</string>
    <string name="tag.genre.59">Gangsta</string>
    <string name="tag.genre.60">Top 40</string>
    <string name="tag.genre.61">Christian Rap</string>
    <string name="tag.genre.62">Pop/Funk</string>
    <string name="tag.genre.63">Jungle</string>
    <string name="tag.genre.64">Native US</string>
    <string name="tag.genre.65">Cabaret</string>
    <string name="tag.genre.66">New Wave</string>
    <string name="tag.genre.67">Psychadelic</string>
    <string name="tag.genre.68">Rave</string>
    <string name="tag.genre.69">Showtunes</string>
    <string name="tag.genre.70">Trailer</string>
    <string name="tag.genre.71">Lo-Fi</string>
    <string name="tag.genre.72">Tribal</string>
    <string name="tag.genre.73">Acid Punk</string>
    <string name="tag.genre.74">Acid Jazz</string>
    <string name="tag.genre.75">Polka</string>
    <string name="tag.genre.76">Retro</string>
    <string name="tag.genre.77">Musical</string>
    <string name="tag.genre.78">Rock &amp; Roll</string>
    <string name="tag.genre.79">Hard Rock</string>
    <string name="tag.genre.80">Folk</string>
    <string name="tag.genre.81">Folk-Rock</string>
    <string name="tag.genre.82">National Folk</string>
    <string name="tag.genre.83">Swing</string>
    <string name="tag.genre.84">Fast Fusion</string>
    <string name="tag.genre.85">Bebob</string>
    <string name="tag.genre.86">Latin</string>
    <string name="tag.genre.87">Revival</string>
    <string name="tag.genre.88">Celtic</string>
    <string name="tag.genre.89">Bluegrass</string>
    <string name="tag.genre.90">Avantgarde</string>
    <string name="tag.genre.91">Gothic Rock</string>
    <string name="tag.genre.92">Progressive Rock</string>
    <string name="tag.genre.93">Psychedelic Rock</string>
    <string name="tag.genre.94">Symphonic Rock</string>
    <string name="tag.genre.95">Slow Rock</string>
    <string name="tag.genre.96">Big Band</string>
    <string name="tag.genre.97">Chorus</string>
    <string name="tag.genre.98">Easy Listening</string>
    <string name="tag.genre.99">Acoustic</string>
    <string name="tag.genre.100">Humour</string>
    <string name="tag.genre.101">Speech</string>
    <string name="tag.genre.102">Chanson</string>
    <string name="tag.genre.103">Opera</string>
    <string name="tag.genre.104">Chamber Music</string>
    <string name="tag.genre.105">Sonata</string>
    <string name="tag.genre.106">Symphony</string>
    <string name="tag.genre.107">Booty Bass</string>
    <string name="tag.genre.108">Primus</string>
    <string name="tag.genre.109">Porn Groove</string>
    <string name="tag.genre.110">Satire</string>
    <string name="tag.genre.111">Slow Jam</string>
    <string name="tag.genre.112">Club</string>
    <string name="tag.genre.113">Tango</string>
    <string name="tag.genre.114">Samba</string>
    <string name="tag.genre.115">Folklore</string>
    <string name="tag.genre.116">Ballad</string>
    <string name="tag.genre.117">Power Ballad</string>
    <string name="tag.genre.118">Rhytmic Soul</string>
    <string name="tag.genre.119">Freestyle</string>
    <string name="tag.genre.120">Duet</string>
    <string name="tag.genre.121">Punk Rock</string>
    <string name="tag.genre.122">Drum Solo</string>
    <string name="tag.genre.123">Acapella</string>
    <string name="tag.genre.124">Euro-House</string>
    <string name="tag.genre.125">Dance Hall</string>
    <string name="tag.genre.126">Goa</string>
    <string name="tag.genre.127">Drum &amp; Bass</string>
    <string name="tag.genre.128">Club-House</string>
    <string name="tag.genre.129">Hardcore</string>
    <string name="tag.genre.130">Terror</string>
    <string name="tag.genre.131">Indie</string>
    <string name="tag.genre.132">BritPop</string>
    <string name="tag.genre.133">Negerpunk</string>
    <string name="tag.genre.134">Polsk Punk</string>
    <string name="tag.genre.135">Beat</string>
    <string name="tag.genre.136">Christian Gangsta Rap</string>
    <string name="tag.genre.137">Heavy Metal</string>
    <string name="tag.genre.138">Black Metal</string>
    <string name="tag.genre.139">Crossover</string>
    <string name="tag.genre.140">Contemporary Christian</string>
    <string name="tag.genre.141">Christian Rock</string>
    <string name="tag.genre.142">Merengue</string>
    <string name="tag.genre.143">Salsa</string>
    <string name="tag.genre.144">Trash Metal</string>
    <string name="tag.genre.145">Anime</string>
    <string name="tag.genre.146">Jpop</string>
    <string name="tag.genre.147">Synthpop</string>
</resources>
