<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayoutDir" android:background="#7f000000" android:paddingTop="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip">
            <ImageView android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/dir24" android:scaleType="fitCenter" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="start" android:id="@id/track_instant_filter_topline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/dirInitialValue" android:singleLine="true" />
        </LinearLayout>
        <View android:id="@id/dir_filter_border" android:background="#b1a0a0a0" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="5.0dip" />
    </LinearLayout>
    <ImageView android:id="@id/bowmenu_top" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/menubow_top_290" android:layout_below="@id/linearLayoutDir" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/bowmenu_top_icon" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="42.0px" android:src="@drawable/genre24" android:layout_below="@id/linearLayoutDir" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="start" android:gravity="center" android:id="@id/track_instant_filter_top" android:paddingLeft="25.0dip" android:paddingTop="5.0dip" android:paddingRight="25.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/genreInitialValue" android:singleLine="true" android:layout_below="@id/linearLayoutDir" android:layout_alignLeft="@id/bowmenu_top" android:layout_alignRight="@id/bowmenu_top" />
    <ImageView android:id="@id/bowmenu_left" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/menubow_left_290" android:layout_centerVertical="true" />
    <ImageView android:id="@id/bowmenu_left_icon" android:visibility="gone" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginLeft="32.0dip" android:src="@drawable/album24" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <RelativeLayout android:paddingLeft="5.0dip" android:paddingTop="25.0dip" android:paddingBottom="25.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignTop="@id/bowmenu_left" android:layout_alignBottom="@id/bowmenu_left" android:layout_alignParentLeft="true">
        <com.turtleplayer.view.VerticalTextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="end" android:gravity="bottom" android:id="@id/track_instant_filter_left" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/albumInitialValue" android:singleLine="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <ImageView android:id="@id/bowmenu_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/menubow_right_290" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <ImageView android:id="@id/bowmenu_right_icon" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="32.0dip" android:src="@drawable/artist24" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <RelativeLayout android:paddingTop="25.0dip" android:paddingRight="5.0dip" android:paddingBottom="25.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignTop="@id/bowmenu_right" android:layout_alignBottom="@id/bowmenu_right" android:layout_alignParentRight="true">
        <com.turtleplayer.view.VerticalTextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="end" android:gravity="top" android:id="@id/track_instant_filter_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/artistInitialValue" android:singleLine="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <ImageView android:id="@id/pointer" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/pointer120" android:scaleType="center" android:contentDescription="@string/pointer" />
</RelativeLayout>